--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ code {
     monospace;
 }
 
-h1, h2, h3, h4, h5, h6 {
+p, h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0;
 }
@@ -30,6 +30,5 @@ div.column { flex-direction: column; }
 div.left { 
   justify-content: flex-start; 
   align-items: flex-start;
-  text-align: right;
-  text-transform: capitalize;  
+  text-align: left; 
 }
