--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+html { margin-left: calc(100vw - 100%); }
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
