--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,17 @@ div.left {
   align-items: flex-start;
   text-align: left; 
 }
+div.stretch { 
+  justify-content: stretch; 
+  align-items: stretch;
+  text-align: left; 
+}
+div.right { 
+  justify-content: flex-end; 
+  align-items: flex-end;
+  text-align: right; 
+}
+
 
 div.fullwidth {
   width: 100%;
