--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,9 @@ html { margin-left: calc(100vw - 100%); }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: monospace !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
 
 p, h1, h2, h3, h4, h5, h6 {
@@ -64,4 +57,14 @@ div.card {
 
 :root {
   color-scheme: dark;
+}
+
+
+div, span, input, label, .MuiChip-label, .MuiTypography-root {
+  /* I'm brute forcing this idc */
+  font-family: monospace, monospace !important;
+}
+
+.MuiChip-label {
+  font-weight: bold !important;
 }
