--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,16 @@ html { margin-left: calc(100vw - 100%); }
 
 body {
   margin: 0;
-  font-family: monospace !important;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
 
 p, h1, h2, h3, h4, h5, h6 {
@@ -60,7 +67,7 @@ div.card {
 }
 
 
-div, span, input, label, .MuiChip-label, .MuiTypography-root {
+.monospace {
   /* I'm brute forcing this idc */
   font-family: monospace, monospace !important;
 }
